[gd_scene load_steps=29 format=3 uid="uid://n1nl3nxm5tas"]

[ext_resource type="PackedScene" uid="uid://ctr1n5fwtmh84" path="res://Characters/Character.tscn" id="1_t5bmj"]
[ext_resource type="Script" path="res://Characters/Player/Player.gd" id="2_bhbo5"]
[ext_resource type="Texture2D" uid="uid://dtdks8hpgc8k6" path="res://Art/o_lobster/heroes/knight/knight_idle_spritesheet.png" id="2_jhb4f"]
[ext_resource type="Script" path="res://Characters/Player/PlayerFSM.gd" id="3_2ue8a"]
[ext_resource type="Texture2D" uid="uid://c4p2dgs6unso" path="res://Art/o_lobster/heroes/knight/knight_run_spritesheet.png" id="3_4nhr5"]
[ext_resource type="Texture2D" uid="uid://dpm4q11ltjmfo" path="res://Art/o_lobster/heroes/knight/weapon_sword_1.png" id="6_014c3"]
[ext_resource type="Texture2D" uid="uid://bj86wbc6lw8en" path="res://Art/o_lobster/effects (new)/slash_effect_anim_spritesheet.png" id="7_1tmqq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1e0fo"]
atlas = ExtResource("2_jhb4f")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3yae"]
atlas = ExtResource("2_jhb4f")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1oqy"]
atlas = ExtResource("2_jhb4f")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hyouq"]
atlas = ExtResource("2_jhb4f")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5eowj"]
atlas = ExtResource("2_jhb4f")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4d3s"]
atlas = ExtResource("2_jhb4f")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_760mc"]
atlas = ExtResource("3_4nhr5")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cw3a4"]
atlas = ExtResource("3_4nhr5")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xdy7"]
atlas = ExtResource("3_4nhr5")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1wy58"]
atlas = ExtResource("3_4nhr5")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_as7jk"]
atlas = ExtResource("3_4nhr5")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cu4k3"]
atlas = ExtResource("3_4nhr5")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_8gl54"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1e0fo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3yae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1oqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyouq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5eowj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4d3s")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_760mc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cw3a4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xdy7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wy58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_as7jk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cu4k3")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_8jytb"]
radius = 4.0

[sub_resource type="Animation" id="Animation_unsp1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}

[sub_resource type="Animation" id="Animation_yvkpn"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}

[sub_resource type="Animation" id="Animation_fqncq"]
resource_name = "move"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"move"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_583qr"]
_data = {
"RESET": SubResource("Animation_unsp1"),
"idle": SubResource("Animation_yvkpn"),
"move": SubResource("Animation_fqncq")
}

[sub_resource type="Animation" id="Animation_to5mj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponPivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.93223]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeaponPivot/WeaponSprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.462512]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SlashSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SlashSprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_601ih"]
resource_name = "attack"
length = 1.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponPivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.8, 1.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-1.5708, 1.87448, 1.87448, -1.5708]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeaponPivot/WeaponSprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15, 0.8, 1.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [-0.462512, 0.551524, 1.3631, 1.3631, -0.462512]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SlashSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SlashSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qwguy"]
_data = {
"RESET": SubResource("Animation_to5mj"),
"attack": SubResource("Animation_601ih")
}

[node name="Player" instance=ExtResource("1_t5bmj")]
collision_layer = 2
collision_mask = 5
script = ExtResource("2_bhbo5")

[node name="FiniteStateMachine" parent="." index="0"]
script = ExtResource("3_2ue8a")

[node name="AnimatedSprite2D" parent="." index="1"]
sprite_frames = SubResource("SpriteFrames_8gl54")
animation = &"idle"

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_8jytb")

[node name="AnimationPlayer" parent="." index="3"]
libraries = {
"": SubResource("AnimationLibrary_583qr")
}

[node name="Weapon" type="Node2D" parent="." index="4"]

[node name="WeaponPivot" type="Node2D" parent="Weapon" index="0"]
rotation = 3.93223

[node name="WeaponSprite" type="Sprite2D" parent="Weapon/WeaponPivot" index="0"]
position = Vector2(7, 3)
rotation = -0.462512
texture = ExtResource("6_014c3")
offset = Vector2(5, -4)

[node name="SlashSprite" type="Sprite2D" parent="Weapon" index="1"]
visible = false
position = Vector2(17, 0)
texture = ExtResource("7_1tmqq")
hframes = 3
frame = 1

[node name="WeaponAnimationPlayer" type="AnimationPlayer" parent="Weapon" index="2"]
libraries = {
"": SubResource("AnimationLibrary_qwguy")
}
